--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "cheese-syntax-highlighting",
+  "publisher": "Cheese",
   "displayName": "Cheese Syntax Highlighting",
   "description": "Adds syntax highlighting for the cheese programming language",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.73.0"
   },
@@ -21,5 +22,6 @@
       "scopeName": "source.cheese",
       "path": "./syntaxes/cheese.tmLanguage.json"
     }]
-  }
+  },
+  "repository": "https://github.com/cheese3660/cheese-syntax-highlighting"
 }
